# d100_d400_code_-6406N-

./: README.md  pyproject.toml
d100_model/: test.py
data/processed/: df_clean.parquet
package/d100_model/: test.ipynb  test.py
package/data/processed/: df_clean.parquet
src/Notebooks/: compare_glm_models.ipynb  eda_cleaning.ipynb  evaluate_models.ipynb  test0.ipynb
src/data/: __init__.py  clean_data.py  load_data.py  parquetfile.py  preprocessing.py
src/data/clean_data/processed/: df_clean.parquet
src/package/: evaluate_models.py  feature_importance.py  pdp_plots.py  version_check.py
src/package/d100_model/: model_test.py  modelt.py  test.ipynb  test.py
src/package/models/: compare_glm_models.py  model_training.py
src/package/tests/: test_quantile_clipper.py
